name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base, miso
  other-modules:       Common
  if !impl(ghcjs)
    buildable: False
  else
    ghcjs-options:
      -dedupe

    hs-source-dirs:
      src, ../src

    build-depends:
      base < 5,
      lens,
      miso,
      mtl,
      transformers,
      ghcjs-base,
      servant,
      network-uri,
      text

    default-language:
      Haskell2010